--- a/config.toml
+++ b/config.toml
@@ -237,7 +237,7 @@ enableGitInfo = false
   [[params.social]]
     icon = "google-scholar"
     icon_pack = "ai"
-    link = "https://scholar.google.co.uk/citations?user=sIwtMXoAAAAJ"
+    link = "https://scholar.google.co.uk/citations?hl=en&user=KBwHN4AAAAAJ"
 
   [[params.social]]
     icon = "github"
