--- a/config.toml
+++ b/config.toml
@@ -237,7 +237,7 @@ enableGitInfo = false
   [[params.social]]
     icon = "google-scholar"
     icon_pack = "ai"
-    link = "https://scholar.google.ca/citations?user=KBwHN4AAAAAJ&hl=en"
+    link = "//scholar.google.ca/citations?user=KBwHN4AAAAAJ&hl=en"
 
   [[params.social]]
     icon = "github"
