--- a/config.toml
+++ b/config.toml
@@ -56,11 +56,11 @@ enableGitInfo = false
   font = "default"
 # Your details.
   name = "Ilias Ettayebi"
-  role = "Graduate Student in Cancer Biology"
+#  role = "Graduate Student in Cancer Biology"
 
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
-  organizations = [ { name = "University of Toronto", url = "" } ]
+  organizations = [ { name = "Princess Margaret Cancer Centre", url = "" } ]
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "avataaars.png"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
