--- a/config.toml
+++ b/config.toml
@@ -63,7 +63,7 @@ enableGitInfo = false
   organizations = [ { name = "Princess Margaret Cancer Centre", url = "" } ]
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
-  avatar = "avataaars.png"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
+  avatar = "Ilias_Image_Website.png"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
   email = "ilias.ettayebi@gmail.com"
   address = "101 College St. Toronto ON, Canada"
   #office_hours = "Monday 10:00 to 13:00 or email for appointment"
